--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://pma.tutorialfactory.org:3306/javawizards
+spring.datasource.username=javawizards
+spring.datasource.password=r1J41VHIm0gB7Y4N
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+#server.servlet.context-path=/SpringBootSwagger/api
