--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,6 +4,7 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
