Build Gradle Update

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation group: 'eu.bitwalker', name: 'UserAgentUtils', version: '1.21'
 
     runtimeOnly 'mysql:mysql-connector-java'
 
