--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'com.h2database:h2'
+
+    compile 'com.maxmind.geoip2:geoip2:2.15.0'
 }
 
 test {
