Various Changes for Hosting the Backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=javawizards
 spring.datasource.password=r1J41VHIm0gB7Y4N
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-#server.servlet.context-path=/SpringBootSwagger/api
+#server.servlet.context-path=/api
