--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation group: 'com.blueconic', name: 'browscap-java', version: '1.3.3'
+    implementation 'com.maxmind.geoip2:geoip2:2.15.0'
 
     runtimeOnly 'mysql:mysql-connector-java'
 
@@ -28,7 +29,6 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'com.h2database:h2'
 
-    compile 'com.maxmind.geoip2:geoip2:2.15.0'
 }
 
 test {
