--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
 
 test:
   stage: test
-  script: gradle test
+  script: gradle check
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
