--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,6 +5,6 @@ spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
