--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation group: 'com.blueconic', name: 'browscap-java', version: '1.3.3'
     implementation 'com.maxmind.geoip2:geoip2:2.15.0'
+    implementation group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
 
     runtimeOnly 'mysql:mysql-connector-java'
 
