--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://pma.tutorialfactory.org:3306/javawizards
-spring.datasource.username=javawizards
-spring.datasource.password=r1J41VHIm0gB7Y4N
+spring.datasource.url=jdbc:mysql://mysql-mariadb-18-104.zap-hosting.com:3306/zap42324-3
+spring.datasource.username=zap42324-3
+spring.datasource.password=gTKZlqLpYmb0onEK
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #server.servlet.context-path=/api
